[package]
name = "glium-glyph"
version = "0.8.0"
authors = ["est31 <MTest31@outlook.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/est31/glium-glyph"
description = "Glium frontend for the glyph-brush text renderer. gfx-glyph with gfx swapped out for glium."
documentation = "https://docs.rs/glium-glyph"
exclude = ["fonts/**"]

[dependencies]
glium = { version = "0.27", default-features = false }
#glium = { path = "../glium", default-features = false }
glyph_brush = "0.6"

[dev-dependencies]
glium = "0.27"
#glium = { path = "../glium" }
