[package]
name = "glium-glyph"
version = "0.14.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/est31/glium-glyph"
description = "Glium frontend for the glyph-brush text renderer. gfx-glyph with gfx swapped out for glium."
documentation = "https://docs.rs/glium-glyph"
exclude = ["fonts/**"]

[dependencies]
glium = { version = "0.32", default-features = false }
#glium = { path = "../glium", default-features = false }
glyph_brush = "0.7"

[dev-dependencies]
glium = "0.32"
#glium = { path = "../glium" }
